replace .collect(Collectors.toList()) with .toList()
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>